newest for assignment 8

--- a/book/Views/Home/Index.cshtml
+++ b/book/Views/Home/Index.cshtml
@@ -4,33 +4,10 @@
 
 @model BooksViewModel
 
-<br /><h1 class="text-center">The Bookstore</h1><br />
-
 @foreach (Books b in Model.Books)
 {
-    <div class="container table">
-        
-        <div class="row border-top border-dark">
-            
-            <div class="col text-right">
-                <br /><h3>@b.Title</h3>
-                <p class="text-muted">By @b.Author</p>
-            </div>
-
-            <div class="col">
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Category: @b.Category</li>
-                    <li class="list-group-item">Number of Pages: @b.PageCount</li>
-                    <li class="list-group-item">Publisher: @b.Publisher</li>
-                    <li class="list-group-item">Price: $@b.Price</li>
-                    <li class="list-group-item">ISBN Number: @b.Isbn</li>
-                </ul>
-            </div><br />
-
-        </div>
-          
-    </div>
+    <partial name="BookSummary" model="b"/>
 }
 
-<div class="text-center" page-book="@Model.PageInfo" page-action="Index"></div>
-<p class="text-center">Page</p>
+<div class="btn-group pull-right m-1" page-book="@Model.PageInfo" page-action="Index" page-class="btn" page-class-normal="btn-outline-dark" 
+    page-class-selected="btn-primary" page-classes-enabled="true"></div>
