--- a/book/Views/Shared/_Layout.cshtml
+++ b/book/Views/Shared/_Layout.cshtml
@@ -26,10 +26,25 @@
             </div>
         </nav>
     </header>
+
     <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+
+        <div class="row m-1 p-1">
+
+            <div class="col-3">
+                <vc:cats></vc:cats>
+            </div>
+
+            <div class="col-9">
+
+                <main role="main" class="pb-3">
+                    @RenderBody()
+                </main>
+
+            </div>
+
+        </div>
+
     </div>
 
     <footer class="border-top footer text-muted text-center">
