--- a/book/Views/Shared/_Layout.cshtml
+++ b/book/Views/Shared/_Layout.cshtml
@@ -1,12 +1,15 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"]</title>
     <link href="~/lib/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link href="/lib/font-awesome/css/all.min.css" rel="stylesheet" />
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
@@ -22,6 +25,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Cart">My Cart</a>
                         </li>
                     </ul>
+                </div>
+                <div class="float-right">
+                    <vc:cart-summary />
                 </div>
             </div>
         </nav>
