--- a/book/Views/Shared/_Layout.cshtml
+++ b/book/Views/Shared/_Layout.cshtml
@@ -39,6 +39,22 @@
 
             <div class="col-3">
                 <vc:cats></vc:cats>
+
+                @*This is where my carousel slides of pictures are*@
+
+                <div id="carouselExampleSlidesOnly" class="carousel slide text-center p-3" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="~/lib/img/hoponpop-graphic.jpg" alt="drsuess" height="125" />
+                        </div>
+                        <div class="carousel-item">
+                            <img src="~/lib/img/MagicSchoolBus.jpg" alt="magicbus" height="125" />
+                        </div>
+                        <div class="carousel-item">
+                            <img src="~/lib/img/9780747532743-e1521465070111.jpg" alt="potter" height="125" />
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="col-9">
