--- a/book/Pages/Admin/AdminLayout.razor
+++ b/book/Pages/Admin/AdminLayout.razor
@@ -1,8 +1,24 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="text-center text-black fw-bold p-2">
-    <span class="navbar-brand m-lg-1">Bookstore Administration</span>
-</div><br />
+<div class="bg-black text-white fw-bold p-2">
+
+    <div class="container-fluid">
+
+        <div class="row">
+
+            <div class="col">
+                <span class="navbar-brand m-lg-2">Bookstore Administration</span>
+            </div>
+
+            <div class="col-2 text-right">
+                <a class="btn btn-sm btn-primary" href="/account/logout">Logout</a>
+            </div>
+
+        </div>
+
+    </div>
+
+</div>
 
 <div class="container-fluid">
 
